销售接口以及解决若干bug(销售接口还差-销售合约过期处理)
