# application/routers/router.go
@@ -30,6 +30,11 @@ func InitRouter() *gin.Engine {
 		apiV1.POST("/queryAccountList", v1.QueryAccountList)
 		apiV1.POST("/createRealEstate", v1.CreateRealEstate)
 		apiV1.POST("/queryRealEstateList", v1.QueryRealEstateList)
+		apiV1.POST("/createSelling", v1.CreateSelling)
+		apiV1.POST("/createSellingByBuy", v1.CreateSellingByBuy)
+		apiV1.POST("/querySellingList", v1.QuerySellingList)
+		apiV1.POST("/querySellingListByBuyer", v1.QuerySellingListByBuyer)
+		apiV1.POST("/updateSelling", v1.UpdateSelling)
 	}
 	return r
 }
